scrollbar beta (with bugs)

--- a/frontend/src/screens/ViewPost/containers/ViewPostPage/styles.module.scss
+++ b/frontend/src/screens/ViewPost/containers/ViewPostPage/styles.module.scss
@@ -20,6 +20,7 @@
   display: flex;
   flex-direction: column;
   grid-area: sidebar;
+  position: relative;
 
   .logInSideBar {
     margin-bottom: 2em;
@@ -41,9 +42,6 @@
     margin-bottom: 2em;
   }
 
-  .viewPostSideBar {
-    position: fixed;
-  }
 }
 
 
